parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASK
    NOT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> var_decl
Rule 5     statement -> var_assign
Rule 6     statement -> func_def
Rule 7     statement -> func_call
Rule 8     statement -> show_stmt
Rule 9     statement -> if_statement
Rule 10    statement -> loop_statement
Rule 11    statement -> class_def
Rule 12    var_decl -> IDENTIFIER expression
Rule 13    var_assign -> IDENTIFIER EQUALS expression
Rule 14    func_def -> FN IDENTIFIER LPAREN parameters RPAREN block
Rule 15    parameters -> IDENTIFIER
Rule 16    parameters -> parameters COMMA IDENTIFIER
Rule 17    parameters -> empty
Rule 18    func_call -> IDENTIFIER LPAREN arguments RPAREN
Rule 19    arguments -> expression
Rule 20    arguments -> arguments COMMA expression
Rule 21    arguments -> empty
Rule 22    show_stmt -> SHOW expression
Rule 23    if_statement -> IF expression block elseif_list else_block
Rule 24    elseif_list -> elseif_list elseif
Rule 25    elseif_list -> empty
Rule 26    elseif -> ELSEIF expression block
Rule 27    else_block -> ELSE block
Rule 28    else_block -> empty
Rule 29    loop_statement -> REPEAT expression block
Rule 30    loop_statement -> LOOP block
Rule 31    class_def -> CLASS IDENTIFIER block
Rule 32    block -> LBRACE statement_list RBRACE
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression MOD expression
Rule 38    expression -> expression GT expression
Rule 39    expression -> expression LT expression
Rule 40    expression -> expression GE expression
Rule 41    expression -> expression LE expression
Rule 42    expression -> expression EQEQ expression
Rule 43    expression -> expression NEQ expression
Rule 44    expression -> expression AND expression
Rule 45    expression -> expression OR expression
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    expression -> NUMBER
Rule 48    expression -> STRING
Rule 49    expression -> IDENTIFIER
Rule 50    empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
ASK                  : 
CLASS                : 31
COMMA                : 16 20
DIVIDE               : 36
ELSE                 : 27
ELSEIF               : 26
EQEQ                 : 42
EQUALS               : 13
FN                   : 14
GE                   : 40
GT                   : 38
IDENTIFIER           : 12 13 14 15 16 18 31 49
IF                   : 23
LBRACE               : 32
LE                   : 41
LOOP                 : 30
LPAREN               : 14 18 46
LT                   : 39
MINUS                : 34
MOD                  : 37
NEQ                  : 43
NOT                  : 
NUMBER               : 47
OR                   : 45
PLUS                 : 33
RBRACE               : 32
REPEAT               : 29
RPAREN               : 14 18 46
SHOW                 : 22
STRING               : 48
TIMES                : 35
error                : 

Nonterminals, with rules where they appear

arguments            : 18 20
block                : 14 23 26 27 29 30 31
class_def            : 11
else_block           : 23
elseif               : 24
elseif_list          : 23 24
empty                : 17 21 25 28
expression           : 12 13 19 20 22 23 26 29 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46
func_call            : 7
func_def             : 6
if_statement         : 9
loop_statement       : 10
parameters           : 14 16
program              : 0
show_stmt            : 8
statement            : 2 3
statement_list       : 1 3 32
var_assign           : 5
var_decl             : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . var_decl
    (5) statement -> . var_assign
    (6) statement -> . func_def
    (7) statement -> . func_call
    (8) statement -> . show_stmt
    (9) statement -> . if_statement
    (10) statement -> . loop_statement
    (11) statement -> . class_def
    (12) var_decl -> . IDENTIFIER expression
    (13) var_assign -> . IDENTIFIER EQUALS expression
    (14) func_def -> . FN IDENTIFIER LPAREN parameters RPAREN block
    (18) func_call -> . IDENTIFIER LPAREN arguments RPAREN
    (22) show_stmt -> . SHOW expression
    (23) if_statement -> . IF expression block elseif_list else_block
    (29) loop_statement -> . REPEAT expression block
    (30) loop_statement -> . LOOP block
    (31) class_def -> . CLASS IDENTIFIER block

    IDENTIFIER      shift and go to state 12
    FN              shift and go to state 13
    SHOW            shift and go to state 14
    IF              shift and go to state 15
    REPEAT          shift and go to state 16
    LOOP            shift and go to state 17
    CLASS           shift and go to state 18

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    var_decl                       shift and go to state 4
    var_assign                     shift and go to state 5
    func_def                       shift and go to state 6
    func_call                      shift and go to state 7
    show_stmt                      shift and go to state 8
    if_statement                   shift and go to state 9
    loop_statement                 shift and go to state 10
    class_def                      shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . var_decl
    (5) statement -> . var_assign
    (6) statement -> . func_def
    (7) statement -> . func_call
    (8) statement -> . show_stmt
    (9) statement -> . if_statement
    (10) statement -> . loop_statement
    (11) statement -> . class_def
    (12) var_decl -> . IDENTIFIER expression
    (13) var_assign -> . IDENTIFIER EQUALS expression
    (14) func_def -> . FN IDENTIFIER LPAREN parameters RPAREN block
    (18) func_call -> . IDENTIFIER LPAREN arguments RPAREN
    (22) show_stmt -> . SHOW expression
    (23) if_statement -> . IF expression block elseif_list else_block
    (29) loop_statement -> . REPEAT expression block
    (30) loop_statement -> . LOOP block
    (31) class_def -> . CLASS IDENTIFIER block

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 12
    FN              shift and go to state 13
    SHOW            shift and go to state 14
    IF              shift and go to state 15
    REPEAT          shift and go to state 16
    LOOP            shift and go to state 17
    CLASS           shift and go to state 18

    statement                      shift and go to state 19
    var_decl                       shift and go to state 4
    var_assign                     shift and go to state 5
    func_def                       shift and go to state 6
    func_call                      shift and go to state 7
    show_stmt                      shift and go to state 8
    if_statement                   shift and go to state 9
    loop_statement                 shift and go to state 10
    class_def                      shift and go to state 11

state 3

    (2) statement_list -> statement .

    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    FN              reduce using rule 2 (statement_list -> statement .)
    SHOW            reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    REPEAT          reduce using rule 2 (statement_list -> statement .)
    LOOP            reduce using rule 2 (statement_list -> statement .)
    CLASS           reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> var_decl .

    IDENTIFIER      reduce using rule 4 (statement -> var_decl .)
    FN              reduce using rule 4 (statement -> var_decl .)
    SHOW            reduce using rule 4 (statement -> var_decl .)
    IF              reduce using rule 4 (statement -> var_decl .)
    REPEAT          reduce using rule 4 (statement -> var_decl .)
    LOOP            reduce using rule 4 (statement -> var_decl .)
    CLASS           reduce using rule 4 (statement -> var_decl .)
    $end            reduce using rule 4 (statement -> var_decl .)
    RBRACE          reduce using rule 4 (statement -> var_decl .)


state 5

    (5) statement -> var_assign .

    IDENTIFIER      reduce using rule 5 (statement -> var_assign .)
    FN              reduce using rule 5 (statement -> var_assign .)
    SHOW            reduce using rule 5 (statement -> var_assign .)
    IF              reduce using rule 5 (statement -> var_assign .)
    REPEAT          reduce using rule 5 (statement -> var_assign .)
    LOOP            reduce using rule 5 (statement -> var_assign .)
    CLASS           reduce using rule 5 (statement -> var_assign .)
    $end            reduce using rule 5 (statement -> var_assign .)
    RBRACE          reduce using rule 5 (statement -> var_assign .)


state 6

    (6) statement -> func_def .

    IDENTIFIER      reduce using rule 6 (statement -> func_def .)
    FN              reduce using rule 6 (statement -> func_def .)
    SHOW            reduce using rule 6 (statement -> func_def .)
    IF              reduce using rule 6 (statement -> func_def .)
    REPEAT          reduce using rule 6 (statement -> func_def .)
    LOOP            reduce using rule 6 (statement -> func_def .)
    CLASS           reduce using rule 6 (statement -> func_def .)
    $end            reduce using rule 6 (statement -> func_def .)
    RBRACE          reduce using rule 6 (statement -> func_def .)


state 7

    (7) statement -> func_call .

    IDENTIFIER      reduce using rule 7 (statement -> func_call .)
    FN              reduce using rule 7 (statement -> func_call .)
    SHOW            reduce using rule 7 (statement -> func_call .)
    IF              reduce using rule 7 (statement -> func_call .)
    REPEAT          reduce using rule 7 (statement -> func_call .)
    LOOP            reduce using rule 7 (statement -> func_call .)
    CLASS           reduce using rule 7 (statement -> func_call .)
    $end            reduce using rule 7 (statement -> func_call .)
    RBRACE          reduce using rule 7 (statement -> func_call .)


state 8

    (8) statement -> show_stmt .

    IDENTIFIER      reduce using rule 8 (statement -> show_stmt .)
    FN              reduce using rule 8 (statement -> show_stmt .)
    SHOW            reduce using rule 8 (statement -> show_stmt .)
    IF              reduce using rule 8 (statement -> show_stmt .)
    REPEAT          reduce using rule 8 (statement -> show_stmt .)
    LOOP            reduce using rule 8 (statement -> show_stmt .)
    CLASS           reduce using rule 8 (statement -> show_stmt .)
    $end            reduce using rule 8 (statement -> show_stmt .)
    RBRACE          reduce using rule 8 (statement -> show_stmt .)


state 9

    (9) statement -> if_statement .

    IDENTIFIER      reduce using rule 9 (statement -> if_statement .)
    FN              reduce using rule 9 (statement -> if_statement .)
    SHOW            reduce using rule 9 (statement -> if_statement .)
    IF              reduce using rule 9 (statement -> if_statement .)
    REPEAT          reduce using rule 9 (statement -> if_statement .)
    LOOP            reduce using rule 9 (statement -> if_statement .)
    CLASS           reduce using rule 9 (statement -> if_statement .)
    $end            reduce using rule 9 (statement -> if_statement .)
    RBRACE          reduce using rule 9 (statement -> if_statement .)


state 10

    (10) statement -> loop_statement .

    IDENTIFIER      reduce using rule 10 (statement -> loop_statement .)
    FN              reduce using rule 10 (statement -> loop_statement .)
    SHOW            reduce using rule 10 (statement -> loop_statement .)
    IF              reduce using rule 10 (statement -> loop_statement .)
    REPEAT          reduce using rule 10 (statement -> loop_statement .)
    LOOP            reduce using rule 10 (statement -> loop_statement .)
    CLASS           reduce using rule 10 (statement -> loop_statement .)
    $end            reduce using rule 10 (statement -> loop_statement .)
    RBRACE          reduce using rule 10 (statement -> loop_statement .)


state 11

    (11) statement -> class_def .

    IDENTIFIER      reduce using rule 11 (statement -> class_def .)
    FN              reduce using rule 11 (statement -> class_def .)
    SHOW            reduce using rule 11 (statement -> class_def .)
    IF              reduce using rule 11 (statement -> class_def .)
    REPEAT          reduce using rule 11 (statement -> class_def .)
    LOOP            reduce using rule 11 (statement -> class_def .)
    CLASS           reduce using rule 11 (statement -> class_def .)
    $end            reduce using rule 11 (statement -> class_def .)
    RBRACE          reduce using rule 11 (statement -> class_def .)


state 12

    (12) var_decl -> IDENTIFIER . expression
    (13) var_assign -> IDENTIFIER . EQUALS expression
    (18) func_call -> IDENTIFIER . LPAREN arguments RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MOD expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression LT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression LE expression
    (42) expression -> . expression EQEQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . STRING
    (49) expression -> . IDENTIFIER

    EQUALS          shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 21

state 13

    (14) func_def -> FN . IDENTIFIER LPAREN parameters RPAREN block

    IDENTIFIER      shift and go to state 26


state 14

    (22) show_stmt -> SHOW . expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MOD expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression LT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression LE expression
    (42) expression -> . expression EQEQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . STRING
    (49) expression -> . IDENTIFIER

    LPAREN          shift and go to state 28
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 27

state 15

    (23) if_statement -> IF . expression block elseif_list else_block
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MOD expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression LT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression LE expression
    (42) expression -> . expression EQEQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . STRING
    (49) expression -> . IDENTIFIER

    LPAREN          shift and go to state 28
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 29

state 16

    (29) loop_statement -> REPEAT . expression block
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MOD expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression LT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression LE expression
    (42) expression -> . expression EQEQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . STRING
    (49) expression -> . IDENTIFIER

    LPAREN          shift and go to state 28
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 30

state 17

    (30) loop_statement -> LOOP . block
    (32) block -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 32

    block                          shift and go to state 31

state 18

    (31) class_def -> CLASS . IDENTIFIER block

    IDENTIFIER      shift and go to state 33


state 19

    (3) statement_list -> statement_list statement .

    IDENTIFIER      reduce using rule 3 (statement_list -> statement_list statement .)
    FN              reduce using rule 3 (statement_list -> statement_list statement .)
    SHOW            reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    REPEAT          reduce using rule 3 (statement_list -> statement_list statement .)
    LOOP            reduce using rule 3 (statement_list -> statement_list statement .)
    CLASS           reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 20

    (49) expression -> IDENTIFIER .

    PLUS            reduce using rule 49 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 49 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 49 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 49 (expression -> IDENTIFIER .)
    MOD             reduce using rule 49 (expression -> IDENTIFIER .)
    GT              reduce using rule 49 (expression -> IDENTIFIER .)
    LT              reduce using rule 49 (expression -> IDENTIFIER .)
    GE              reduce using rule 49 (expression -> IDENTIFIER .)
    LE              reduce using rule 49 (expression -> IDENTIFIER .)
    EQEQ            reduce using rule 49 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 49 (expression -> IDENTIFIER .)
    AND             reduce using rule 49 (expression -> IDENTIFIER .)
    OR              reduce using rule 49 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 49 (expression -> IDENTIFIER .)
    FN              reduce using rule 49 (expression -> IDENTIFIER .)
    SHOW            reduce using rule 49 (expression -> IDENTIFIER .)
    IF              reduce using rule 49 (expression -> IDENTIFIER .)
    REPEAT          reduce using rule 49 (expression -> IDENTIFIER .)
    LOOP            reduce using rule 49 (expression -> IDENTIFIER .)
    CLASS           reduce using rule 49 (expression -> IDENTIFIER .)
    $end            reduce using rule 49 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 49 (expression -> IDENTIFIER .)
    LBRACE          reduce using rule 49 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 49 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 49 (expression -> IDENTIFIER .)


state 21

    (12) var_decl -> IDENTIFIER expression .
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . TIMES expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . MOD expression
    (38) expression -> expression . GT expression
    (39) expression -> expression . LT expression
    (40) expression -> expression . GE expression
    (41) expression -> expression . LE expression
    (42) expression -> expression . EQEQ expression
    (43) expression -> expression . NEQ expression
    (44) expression -> expression . AND expression
    (45) expression -> expression . OR expression

    IDENTIFIER      reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    FN              reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    SHOW            reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    IF              reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    REPEAT          reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    LOOP            reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    CLASS           reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    $end            reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    RBRACE          reduce using rule 12 (var_decl -> IDENTIFIER expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    MOD             shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40
    GE              shift and go to state 41
    LE              shift and go to state 42
    EQEQ            shift and go to state 43
    NEQ             shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46


state 22

    (13) var_assign -> IDENTIFIER EQUALS . expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MOD expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression LT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression LE expression
    (42) expression -> . expression EQEQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . STRING
    (49) expression -> . IDENTIFIER

    LPAREN          shift and go to state 28
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 20

    expression                     shift and go to state 47

state 23

    (18) func_call -> IDENTIFIER LPAREN . arguments RPAREN
    (46) expression -> LPAREN . expression RPAREN
    (19) arguments -> . expression
    (20) arguments -> . arguments COMMA expression
    (21) arguments -> . empty
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MOD expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression LT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression LE expression
    (42) expression -> . expression EQEQ expression
    (43) expression -> . expression NEQ expression
    (44) expression -> . expression AND expression
    (45) expression -> . expression OR expression
    (46) expression -> . LPAREN expression RPAREN
    (47) expression -> . NUMBER
    (48) expression -> . STRING
    (49) expression -> . IDENTIFIER
    (50) empty -> .

    LPAREN          shift and go to state 28
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    IDENTIFIER      shift and go to state 20
    RPAREN          reduce using rule 50 (empty -> .)
    COMMA           reduce using rule 50 (empty -> .)

    arguments                      shift and go to state 48
    expression                     shift and go to state 49
    empty                          shift and go to state 50

state 24

    (47) expression -> NUMBER .

    PLUS            reduce using rule 47 (expression -> NUMBER .)
    MINUS           reduce using rule 47 (expression -> NUMBER .)
    TIMES           reduce using rule 47 (expression -> NUMBER .)
    DIVIDE          reduce using rule 47 (expression -> NUMBER .)
    MOD             reduce using rule 47 (expression -> NUMBER .)
    GT              reduce using rule 47 (expression -> NUMBER .)
    LT              reduce using rule 47 (expression -> NUMBER .)
    GE              reduce using rule 47 (expression -> NUMBER .)
    LE              reduce using rule 47 (expression -> NUMBER .)
    EQEQ            reduce using rule 47 (expression -> NUMBER .)
    NEQ             reduce using rule 47 (expression -> NUMBER .)
    AND             reduce using rule 47 (expression -> NUMBER .)
    OR              reduce using rule 47 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 47 (expression -> NUMBER .)
    FN              reduce using rule 47 (expression -> NUMBER .)
    SHOW            reduce using rule 47 (expression -> NUMBER .)
    IF              reduce using rule 47 (expression -> NUMBER .)
    REPEAT          reduce using rule 47 (expression -> NUMBER .)
    LOOP            reduce using rule 47 (expression -> NUMBER .)
    CLASS           reduce using rule 47 (expression -> NUMBER .)
    $end            reduce using rule 47 (expression -> NUMBER .)
    RBRACE          reduce using rule 47 (expression -> NUMBER .)
    LBRACE          reduce using rule 47 (expression -> NUMBER .)
    RPAREN          reduce using rule 47 (expression -> NUMBER .)
    COMMA           reduce using rule 47 (expression -> NUMBER .)


state 25

    (48) expression -> STRING .

    PLUS            reduce using rule 48 (expression -> STRING .)
    MINUS           reduce using rule 48 (expression -> STRING .)
    TIMES           reduce using rule 48 (expression -> STRING .)
    DIVIDE          reduce using rule 48 (expression -> STRING .)
    MOD             reduce using rule 48 (expression -> STRING .)
    GT              reduce using rule 48 (expression -> STRING .)
    LT              reduce using rule 48 (expression -> STRING .)
    GE              reduce using rule 48 (expression -> STRING .)
    LE              reduce using rule 48 (expression -> STRING .)
    EQEQ            reduce using rule 48 (expression -> STRING .)
    NEQ             reduce using rule 48 (expression -> STRING .)
    AND             reduce using rule 48 (expression -> STRING .)
    OR              reduce using rule 48 (expression -> STRING .)
    IDENTIFIER      reduce using rule 48 (expression -> STRING .)
    FN              reduce using rule 48 (expression -> STRING .)
    SHOW            reduce using rule 48 (expression -> STRING .)
    IF              reduce using rule 48 (expression -> STRING .)
    REPEAT          reduce using rule 48 (expression -> STRING .)
    LOOP            reduce using rule 48 (expression -> STRING .)
    CLASS           reduce using rule 48 (expression -> STRING .)
    $end            reduce using rule 48 (expression -> STRING .)
    RBRACE          reduce using rule 48 (expression -> STRING .)
    LBRACE          reduce using rule 48 (expression -> STRING .)
    RPAREN          reduce using rule 48 (expression -> STRING .)
    COMMA           reduce using rule 48 (expression -> STRING .)


state 26

    (14) func_def -> FN IDENTIFIER . LPAREN parameters RPAREN block

    LPAREN          shift and go to state 51


state 27

    (22) show_stmt -> SHOW expression .
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . TIMES expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . MOD expression
    (38) expression -> expression . GT expression
    (39) expression -> expression . LT expression
    (40) expression -> expression . GE expression
    (41) expression -> expression . LE expression
    (42) expression -> expression . EQEQ expression
    (43) expression -> expression . NEQ expression
    (44) expression -> expression . AND expression
    (45) expression -> expression . OR expression

    IDENTIFIER      reduce using rule 22 (show_stmt -> SHOW expression .)
    FN              reduce using rule 22 (show_stmt -> SHOW expression .)
    SHOW            reduce using rule 22 (show_stmt -> SHOW expression .)
    IF              reduce using rule 22 (show_stmt -> SHOW expression .)
    REPEAT          reduce using rule 22 (show_stmt -> SHOW expression .)
    LOOP            reduce using rule 22 (show_stmt -> SHOW expression .)
    CLASS           reduce using rule 22 (show_stmt -> SHOW expression .)
    $end            reduce using rule 22 (show_stmt -> SHOW expression .)
    RBRACE          reduce using rule 22 (show_stmt -> SHOW expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    MOD             shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40
    GE              shift and go to state 41
    LE              shift and go to state 42
    EQEQ            shift and go to state 43
    NEQ             shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46


state 28
